--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,16 +22,70 @@ html {
 /* REUSABLE COMPONENTS*/
 /* -------------------------------- */
 
+section {
+  padding: 80px 0;
+}
+
 /* -------- HEADINGS -------- */
-h1 {
-  color: #fff;
-  margin: 0;
-  font-size: 250%;
+h1,
+h2,
+h3 {
   text-transform: uppercase;
   font-weight: 300;
-  letter-spacing: 1px;
-  word-spacing: 3px;
+}
+
+h1 {
+  color: #fff;
+  margin-top: 0;
   margin-bottom: 20px;
+  font-size: 250%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: "";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+h3 {
+  font-size: 120%;
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+/* -------- PARAGRAPHS -------- */
+.long-copy {
+  line-height: 145%;
+
+  margin-left: 0 auto;
+}
+
+.features-box > p {
+  font-size: 90%;
+  line-height: 145%;
+}
+
+/* -------- ICONS -------- */
+.icon-big {
+  font-size: 350%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
 }
 
 /* -------- BUTTONS -------- */
@@ -127,4 +181,27 @@ ul {
 .main-nav > li > a:active {
   border-bottom: 2px solid #e67e22;
   transition: border-bottom 250ms;
+}
+
+/* -------------------------------- */
+/* FEATURES */
+/* -------------------------------- */
+.features-text {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.features-columns {
+  max-width: 1140px;
+  display: flex;
+  margin: 0 auto;
+}
+
+.long-copy {
+  margin-bottom: 20px;
+}
+
+.features-box {
+  width: 25%;
+  padding: 3%;
 }
