--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -229,17 +229,26 @@ ul {
 }
 
 .meals-showcase {
-  overflow: hidden;
   width: 100%;
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
+  list-style: none;
 }
 
-.meals-showcase > img {
+.meals-showcase > li {
+  display: block;
+  overflow: hidden;
+  background-color: #000;
+}
+
+.meals-showcase > li > img {
   width: 100%;
-  transform: scale(1.2);
+  transform: scale(1.3);
+  transition: all 0.4s;
+  opacity: 0.75;
 }
 
-.meals-showcase > img:hover {
+.meals-showcase > li > img:hover {
   transform: scale(1.03);
+  opacity: 1;
 }
