--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,7 +124,7 @@ a:active {
   padding: 10px 30px;
   font-weight: 300;
   text-decoration: none;
-  border-radius: 6px;
+  border-radius: 4px;
   border: 1px solid #e67e22;
   transition: background-color 200ms, border 200ms, color 200ms;
 }
@@ -173,7 +173,7 @@ nav {
   margin: auto;
 }
 
-ul {
+ul > .main-nav {
   display: flex;
 }
 
@@ -420,4 +420,135 @@ cite > img {
   border-radius: 50%;
   margin-right: 10px;
   vertical-align: middle;
+}
+
+/* -------------------------------- */
+/* SIGN UP */
+/* -------------------------------- */
+.section-plans {
+  background-color: #f4f4f4;
+}
+
+.plans-grid {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 40px;
+}
+
+.plans-grid > .plans-box {
+  background-color: #fff;
+  margin-top: 30px;
+  border-radius: 5px;
+  box-shadow: 0 3px 2px #efefef;
+}
+
+.plans-box > div {
+  border-bottom: 1px solid #e8e8e8;
+  padding: 15px;
+}
+
+.plans-box > div:first-child {
+  background-color: #fcfcfc;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.plans-box > div:last-child {
+  text-align: center;
+  border-bottom: 1px solid transparent;
+}
+
+.plan-price {
+  font-size: 3rem;
+  font-weight: 100;
+  color: #e67e22;
+}
+
+.plan-price > span {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.plan-price-meal {
+  font-size: 0.8rem;
+}
+
+.plans-box > div > ul > li {
+  list-style: none;
+  padding: 5px 0;
+}
+
+.plans-box > div > ul > li > i {
+  margin-right: 15px;
+  font-size: 10px;
+}
+
+/* -------------------------------- */
+/* CONTACT FORM */
+/* -------------------------------- */
+.contact-form-grid {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#form {
+  background-color: rgb(250, 250, 250);
+  width: 50vw;
+  border-radius: 6px;
+  margin: auto;
+  font-family: "Roboto", sans-serif;
+  padding: 15px 0;
+}
+
+.labels {
+  display: inline-block;
+  text-align: right;
+  vertical-align: top;
+  width: 40%;
+  padding: 5px;
+}
+
+.input-tab {
+  display: inline-block;
+  vertical-align: middle;
+  width: 48%;
+  text-align: left;
+  padding: 5px;
+}
+
+.input-field {
+  width: 250px;
+  padding: 5px;
+}
+
+ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  margin-top: 20px;
+  width: 90px;
+  height: 45px;
+  border-radius: 5px;
+  background-color: #f06292;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 1rem;
+}
+
+#dropdown {
+  height: 25px;
+}
+
+.checkbox,
+.radio {
+  position: relative;
+  left: -43px;
+  margin-right: -30px;
 }
