--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -188,7 +188,7 @@ nav {
   margin: auto;
 }
 
-ul > .main-nav {
+.main-nav {
   display: flex;
 }
 
@@ -520,6 +520,9 @@ form {
   outline: 0 none;
 }
 
+option {
+}
+
 input,
 select,
 textarea {
@@ -550,66 +553,65 @@ textarea[placeholder] {
   font-weight: 300;
 }
 
-/* 
-fieldset {
+/* -------------------------------- */
+/* FOOTER */
+/* -------------------------------- */
+footer {
+  background-color: #333;
+  width: 100vw;
+  color: #c5c5c5;
+  margin-top: 50px;
+}
+
+.footer-grid {
   max-width: 1240px;
-  padding: 4px;
+  padding: 40px;
   margin: 0 auto;
-  border: 0 none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0 0px;
 }
 
-input,
-output,
-textarea,
-select,
-button {
-  box-sizing: border-box;
-  padding: 0.2em 0.4em;
-  margin: 0.2em 0;
-  outline: 0 none;
-  border: 0 none;
-  box-shadow: none;
+.footer-nav > ul {
+  list-style: none;
+  display: flex;
 }
 
-label {
-  box-sizing: border-box;
-  user-select: none;
-  cursor: pointer;
+.social-links {
 }
 
-input:focus + label,
-textarea:focus + label,
-select:focus + label {
-  color: #e67e22;
+.social-links > a {
+  color: #c5c5c5;
+  margin-left: 10px;
 }
 
-input,
-output,
-textarea,
-select {
-  grid-column: 2 / 4;
-  width: auto;
-  margin: 0;
+.footer-nav > ul > li > a {
+  margin-right: 15px;
+  color: #c5c5c5;
 }
 
-button {
-  grid-column: 2 / 4;
-  width: 100px;
+.social-links {
+  text-align: right;
 }
 
-.btn-full input[type="checkbox"] {
-  grid-column: 1 / 3;
-  justify-self: end;
-  margin: 0;
+.footer-nav > ul > li > a:link,
+.footer-nav > ul > li > a:visited,
+.social-links > a:link,
+.social-links > a:visited {
+  text-decoration: none;
+  border: none;
+  color: #888;
+  transition: all 0.3s;
 }
 
-label,
-input[type="checkbox"] + label {
-  width: auto;
-  padding: 0;
-  margin: 0;
+.social-links > a:link,
+.social-links > a:visited {
+  font-size: 1.3rem;
 }
 
-textarea + label {
-  align-self: flex-start;
-} */
+.footer-nav > ul > li > a:hover,
+.footer-nav > ul > li > a:active,
+.social-links > a:hover,
+.social-links > a:active {
+  color: #ddd;
+}
