--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,18 +4,18 @@
 /* BASIC SETUP */
 /* -------------------------------- */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  background-color: #fff;
-  color: #555;
-  font-family: "Lato", "Arial", sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  text-rendering: optimizeLegibility;
+    background-color: #fff;
+    color: #555;
+    font-family: "Lato", "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
 }
 
 /* -------------------------------- */
@@ -23,96 +23,103 @@ html {
 /* -------------------------------- */
 
 section {
-  padding: 80px 0;
+    padding: 80px 0;
+}
+
+.container {
+    max-width: 1240px;
+    display: grid;
+    margin: 0 auto;
+    grid-column-gap: 40px;
 }
 
 /* -------- HEADINGS -------- */
 h1,
 h2,
 h3 {
-  text-transform: uppercase;
-  font-weight: 300;
+    text-transform: uppercase;
+    font-weight: 300;
 }
 
 h1 {
-  color: #fff;
-  margin-top: 0;
-  margin-bottom: 20px;
-  font-size: 250%;
-  word-spacing: 4px;
-  letter-spacing: 1px;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 250%;
+    word-spacing: 4px;
+    letter-spacing: 1px;
 }
 
 h2 {
-  font-size: 180%;
-  word-spacing: 2px;
-  text-align: center;
-  margin-bottom: 30px;
-  letter-spacing: 1px;
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
 }
 
 h2:after {
-  display: block;
-  height: 2px;
-  background-color: #e67e22;
-  content: "";
-  width: 100px;
-  margin: 0 auto;
-  margin-top: 30px;
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: "";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
 
 h3 {
-  font-size: 120%;
-  margin-bottom: 20px;
-  margin-top: 20px;
+    font-size: 120%;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 /* -------- LINKS -------- */
 a:link,
 a:visited {
-  color: #e67e22;
-  text-decoration: none;
-  border-bottom: 1px solid #e67e22;
-  padding-top: 2px;
-  transition: all 0.2s;
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-top: 2px;
+    transition: all 0.2s;
 }
 
 a:hover,
 a:active {
-  color: #555;
-  border-bottom: 1px solid transparent;
+    color: #555;
+    border-bottom: 1px solid transparent;
 }
 
 /* -------- PARAGRAPHS -------- */
 .long-copy {
-  width: 60%;
-  line-height: 145%;
-  margin: 0 auto;
+    width: 70%;
+    line-height: 145%;
+    margin-left: 15%
 }
 
 .features-box,
 .paragraph-text {
-  font-size: 90%;
-  line-height: 145%;
+    font-size: 90%;
+    line-height: 145%;
 }
 
 /* -------- ICONS -------- */
 .icon-big {
-  font-size: 350%;
-  display: block;
-  color: #e67e22;
-  margin-bottom: 10px;
-  margin-top: 10px;
+    font-size: 350%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .icon-small {
-  display: inline-block;
-  width: 30px;
-  text-align: center;
-  color: #e67e22;
-  font-size: 1.2rem;
-  margin-right: 10px;
-  margin-bottom: 10px;
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 1.2rem;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 /* -------- BUTTONS -------- */
@@ -120,46 +127,46 @@ a:active {
 .btn:link,
 .btn:visited,
 button[type="submit"] {
-  display: inline-block;
-  padding: 10px 30px;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 4px;
-  border: 1px solid #e67e22;
-  transition: background-color 200ms, border 200ms, color 200ms;
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 4px;
+    border: 1px solid #e67e22;
+    transition: background-color 200ms, border 200ms, color 200ms;
 }
 
 .btn-full:link,
 .btn-full:visited,
 button[type="submit"] {
-  background-color: #e67e22;
-  margin-right: 15px;
-  color: #fff;
-  border: 1px solid #e67e22;
+    background-color: #e67e22;
+    margin-right: 15px;
+    color: #fff;
+    border: 1px solid #e67e22;
 }
 
 .btn-full:hover,
 .btn-full:active,
 button[type="submit"]:hover {
-  border: 1px solid #cf6d17;
+    border: 1px solid #cf6d17;
 }
 
 .btn-ghost:link,
 .btn-ghost:visited {
-  color: #e67e22;
-  border: 1px solid #e67e22;
+    color: #e67e22;
+    border: 1px solid #e67e22;
 }
 
 .btn-ghost:hover,
 .btn-ghost:active {
-  border: 1px solid #cf6d17;
-  color: #fff;
+    border: 1px solid #cf6d17;
+    color: #fff;
 }
 
 .btn:hover,
 .btn:active,
 button[type="submit"]:hover {
-  background-color: #cf6d17;
+    background-color: #cf6d17;
 }
 
 /* -------------------------------- */
@@ -167,58 +174,58 @@ button[type="submit"]:hover {
 /* -------------------------------- */
 
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/resources/css/img/hero.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+        url("/resources/css/img/hero.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 .hero-text-box {
-  position: absolute;
-  max-width: 1240px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    max-width: 1240px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 nav {
-  max-width: 1240px;
-  margin: auto;
+    max-width: 1240px;
+    margin: auto;
 }
 
 .main-nav {
-  display: flex;
+    display: flex;
 }
 
 .logo {
-  height: 100px;
-  width: auto;
-  float: left;
-  margin-top: 20px;
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
 }
 
 .main-nav {
-  float: right;
-  list-style: none;
-  margin-top: 50px;
+    float: right;
+    list-style: none;
+    margin-top: 50px;
 }
 
-.main-nav > li {
-  display: inline-block;
-  margin-left: 40px;
-  position: relative;
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+    position: relative;
 }
 
-.main-nav > li > a:link,
-.main-nav > li > a:visited {
-  padding: 5px 0;
-  text-decoration: none;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 90%;
-  border-bottom: 2px solid transparent;
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 5px 0;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
 }
 
 /* .main-nav > li > a:hover,
@@ -227,391 +234,383 @@ nav {
   transition: border-bottom 250ms;
 } */
 
-.main-nav > li > span {
-  position: absolute;
-  margin-top: 15px;
-  bottom: -5px;
-  right: 0;
-  width: 0%;
-  height: 2px;
-  background: #e67e22;
-  transition: all 0.3s;
+.main-nav li span {
+    position: absolute;
+    margin-top: 15px;
+    bottom: -5px;
+    right: 0;
+    width: 0%;
+    height: 2px;
+    background: #e67e22;
+    transition: all 0.3s;
 }
 
-.main-nav > li:hover > span {
-  width: 100%;
+.main-nav li:hover span {
+    width: 100%;
 }
 
 /* -------------------------------- */
 /* FEATURES */
 /* -------------------------------- */
 .features-text {
-  width: 60%;
-  margin: 0 auto;
+    width: 60%;
+    margin: 0 auto;
 }
 
-.features-grid {
-  max-width: 1240px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 0 auto;
-  grid-column-gap: 40px;
+.section-features .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
 }
 
 .long-copy {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
-.features-box {
-  /* width: 25%;
-  padding: 1.5rem; */
-}
+
 
 /* -------------------------------- */
 /* MEALS */
 /* -------------------------------- */
 .favourite-meals {
-  padding: 0;
+    padding: 0;
 }
 
 .meals-showcase {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  list-style: none;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    list-style: none;
 }
 
-.meals-showcase > li {
-  display: block;
-  overflow: hidden;
-  background-color: #000;
+.meals-showcase li {
+    display: block;
+    overflow: hidden;
+    background-color: #000;
 }
 
-.meals-showcase > li > img {
-  width: 100%;
-  transform: scale(1.3);
-  transition: all 0.4s;
-  opacity: 0.7;
+.meals-showcase li img {
+    width: 100%;
+    transform: scale(1.3);
+    transition: all 0.4s;
+    opacity: 0.7;
 }
 
-.meals-showcase > li > img:hover {
-  transform: scale(1.03);
-  opacity: 1;
+.meals-showcase li img:hover {
+    transform: scale(1.03);
+    opacity: 1;
 }
 
 /* -------------------------------- */
 /* HOW IT WORKS */
 /* -------------------------------- */
-.how-it-works {
-  background-color: #f4f4f4;
+.section-works {
+    background-color: #f4f4f4;
 }
 
-.steps-grid {
-  max-width: 1240px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-areas: "iphone-logo steps";
+.container {
+    grid-template-columns: 1fr 1fr;
 }
 
 .iphone-logo {
-  margin-left: 150px;
-  margin-right: 60px;
+    text-align: right;
+    margin-right: 60px;
 }
 
-.iphone-logo > img {
-  height: 500px;
-  width: auto;
-  margin-top: 60px;
-  grid-area: iphone-logo;
+.iphone-logo img {
+    height: 500px;
+    width: auto;
+    margin-top: 60px;
+    grid-area: iphone-logo;
 }
 
 .steps {
-  margin-top: 130px;
+    margin-top: 130px;
+    display: flex;
+    flex-direction: column;
 }
 
-.steps > ul {
-  list-style: none;
-  grid-area: steps;
+.steps ul {
+    list-style: none;
+    grid-area: steps;
 }
 
 .steps .work-steps:nth-child(3) {
-  margin-bottom: 80px;
+    margin-bottom: 80px;
 }
 
-.work-steps {
-  margin-bottom: 40px;
+.steps .work-steps {
+    margin-bottom: 40px;
+    display: inline-flex;
 }
 
-.work-steps > div {
-  display: inline-block;
-  height: 55px;
-  width: 55px;
-  font-size: 1.6rem;
-  padding: 5px;
-  margin-right: 25px;
-  color: #e67e22;
-  border: 2px solid #e67e22;
-  border-radius: 50%;
-  text-align: center;
-}
-
-.work-steps > p {
-  display: inline-block;
+.steps .work-steps div {
+    height: 55px;
+    min-width: 55px;
+    font-size: 1.6rem;
+    padding: 5px;
+    margin-right: 25px;
+    color: #e67e22;
+    border: 2px solid #e67e22;
+    border-radius: 50%;
+    text-align: center;
 }
 
 .btn-app:link,
 .btn-app:visited {
-  border-bottom: 0;
+    border-bottom: 0;
 }
 
-.btn-app > img {
-  height: 50px;
-  width: auto;
-  margin-right: 15px;
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 15px;
 }
 
 /* -------------------------------- */
 /* CITIES */
 /* -------------------------------- */
 
-.cities-grid {
-  display: grid;
-  max-width: 1240px;
-  margin: 0 auto;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 30px;
+.section-cities .container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 30px;
 }
 
-.cities > img {
-  height: auto;
-  width: 100%;
-  margin-top: 15px;
+.cities img {
+    height: auto;
+    width: 100%;
+    margin-top: 15px;
 }
 
 /* -------------------------------- */
 /* TESTIMONIALS */
 /* -------------------------------- */
 .section-testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("/resources/css/img/back-customers.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  color: #fff;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+        url("/resources/css/img/back-customers.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    color: #fff;
 }
 
-.testimonials-grid {
-  display: grid;
-  max-width: 1240px;
-  margin: 0 auto;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 30px;
-  text-align: left;
+.section-testimonials .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    text-align: left;
 }
 
 blockquote {
-  font-style: italic;
-  line-height: 1.5rem;
-  position: relative;
-  margin-top: 40px;
+    font-style: italic;
+    line-height: 1.5rem;
+    position: relative;
+    margin-top: 40px;
 }
 
 blockquote:before {
-  content: "\201C";
-  font-size: 5rem;
-  display: block;
-  position: absolute;
-  top: -15px;
-  left: -9px;
+    content: "\201C";
+    font-size: 5rem;
+    display: block;
+    position: absolute;
+    top: -15px;
+    left: -9px;
 }
 
 cite {
-  font-size: 0.9rem;
-  margin-top: 30px;
-  display: block;
+    font-size: 0.9rem;
+    margin-top: 30px;
+    display: block;
 }
 
-cite > img {
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-  vertical-align: middle;
+cite img {
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
 
 /* -------------------------------- */
 /* SIGN UP */
 /* -------------------------------- */
 .section-plans {
-  background-color: #f4f4f4;
+    background-color: #f4f4f4;
 }
 
-.plans-grid {
-  max-width: 1240px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 40px;
+.section-plans .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 40px;
 }
 
-.plans-grid > .plans-box {
-  background-color: #fff;
-  margin-top: 30px;
-  border-radius: 5px;
-  box-shadow: 0 3px 2px #efefef;
+.container .plans-box {
+    background-color: #fff;
+    margin-top: 30px;
+    border-radius: 5px;
+    box-shadow: 0 3px 2px #efefef;
 }
 
-.plans-box > div {
-  border-bottom: 1px solid #e8e8e8;
-  padding: 15px;
+.plans-box div {
+    border-bottom: 1px solid #e8e8e8;
+    padding: 15px;
 }
 
-.plans-box > div:first-child {
-  background-color: #fcfcfc;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+.plans-box div:first-child {
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
-.plans-box > div:last-child {
-  text-align: center;
-  border-bottom: 1px solid transparent;
+.plans-box div:last-child {
+    text-align: center;
+    border-bottom: 1px solid transparent;
 }
 
 .plan-price {
-  font-size: 3rem;
-  font-weight: 100;
-  color: #e67e22;
+    font-size: 3rem;
+    font-weight: 100;
+    color: #e67e22;
 }
 
-.plan-price > span {
-  font-size: 1.2rem;
-  font-weight: 300;
+.plan-price span {
+    font-size: 1.2rem;
+    font-weight: 300;
 }
 
 .plan-price-meal {
-  font-size: 0.8rem;
+    font-size: 0.8rem;
 }
 
-.plans-box > div > ul > li {
-  list-style: none;
-  padding: 5px 0;
+.plans-box div ul li {
+    list-style: none;
+    padding: 5px 0;
 }
 
-.plans-box > div > ul > li > i {
-  margin-right: 15px;
-  font-size: 10px;
+.plans-box div ul li i {
+    margin-right: 15px;
+    font-size: 10px;
 }
 
 /* -------------------------------- */
 /* CONTACT FORM */
 /* -------------------------------- */
 form {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
-.contact-form-grid {
-  margin-top: 40px;
-  width: 60%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 15px 20px;
+.section-form .container {
+    margin-top: 40px;
+    width: 60%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 15px 20px;
 }
 
 *:focus {
-  outline: 0 none;
-}
-
-option {
+    outline: 0 none;
 }
 
 input,
 select,
 textarea {
-  width: 70%;
+    width: 70%;
 }
 
 input,
 label,
 textarea {
-  padding: 4px;
+    padding: 4px;
 }
 
 label {
-  text-align: right;
+    text-align: right;
 }
 
 button {
-  width: 130px;
-  grid-column: 2 / 3;
+    width: 130px;
+    grid-column: 2 / 3;
 }
 
 input[type="checkbox"] {
-  margin-top: 8px;
+    margin-top: 8px;
 }
 
 input[placeholder],
 textarea[placeholder] {
-  font-weight: 300;
+    font-weight: 300;
 }
 
 /* -------------------------------- */
 /* FOOTER */
 /* -------------------------------- */
 footer {
-  background-color: #333;
-  width: 100vw;
-  color: #c5c5c5;
-  margin-top: 50px;
+    background-color: #333;
+    width: 100vw;
+    color: #c5c5c5;
+    margin-top: 50px;
 }
 
-.footer-grid {
-  max-width: 1240px;
-  padding: 40px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 0 0px;
+.container {
+    padding: 40px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0 0px;
 }
 
-.footer-nav > ul {
-  list-style: none;
-  display: flex;
+.footer-nav ul {
+    list-style: none;
+    display: flex;
 }
 
-.social-links {
+.social-links a {
+    color: #c5c5c5;
+    margin-left: 10px;
 }
 
-.social-links > a {
-  color: #c5c5c5;
-  margin-left: 10px;
-}
-
-.footer-nav > ul > li > a {
-  margin-right: 15px;
-  color: #c5c5c5;
+.footer-nav ul li a {
+    margin-right: 15px;
+    color: #c5c5c5;
 }
 
 .social-links {
-  text-align: right;
+    text-align: right;
 }
 
-.footer-nav > ul > li > a:link,
-.footer-nav > ul > li > a:visited,
-.social-links > a:link,
-.social-links > a:visited {
-  text-decoration: none;
-  border: none;
-  color: #888;
-  transition: all 0.3s;
+.footer-nav ul li a:link,
+.footer-nav ul li a:visited,
+.social-links a:link,
+.social-links a:visited {
+    text-decoration: none;
+    border: none;
+    color: #888;
+    transition: all 0.3s;
 }
 
-.social-links > a:link,
-.social-links > a:visited {
-  font-size: 1.3rem;
+.social-links a:link,
+.social-links a:visited {
+    font-size: 1.3rem;
 }
 
-.footer-nav > ul > li > a:hover,
-.footer-nav > ul > li > a:active,
-.social-links > a:hover,
-.social-links > a:active {
-  color: #ddd;
+.footer-nav ul li a:hover,
+.footer-nav ul li a:active {
+    color: #ddd
+}
+
+.fa-facebook,
+.fa-twitter-square,
+.fa-google-plus-square,
+.fa-instagram {
+    transition: all 0.3s;
+}
+
+.fa-facebook:hover {
+    color: #3b5998;
+}
+
+.fa-twitter-square:hover {
+    color: #1da1f2;
+}
+
+.fa-google-plus-square:hover {
+    color: #db4437;
+}
+
+.fa-instagram:hover {
+    color: #c32aa3;
 }
