worked on the media queries

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -203,6 +203,7 @@
     .section-plans .container {
         grid-template-columns: 1fr;
         grid-column-gap: 40px;
+        width: 70%;
     }
 
     .section-plans .container .plans-box h3,
